# lab06

./: CMakeLists.txt
.github/workflows/: ci.yml  package-rpm.yml  package.yml
banking/: CMakeLists.txt  Transaction.cpp  Transaction.h
test/: test.cpp
